--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   border: 1px solid rgb(101, 101, 101);
 }
 
-.input {
+.result-screen {
   background-color: rgb(116, 114, 114);
   height: 35px;
   text-align: right;
