--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,15 @@
   cursor: pointer;
   border: 1px solid rgb(101, 101, 101);
 }
+
+@media only screen and (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    width: 50%;
+    padding: 0;
+  }
+}
