--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10%;
+  margin-top: 7%;
   width: 25%;
   padding: 0;
 }
@@ -52,6 +52,42 @@
   font-size: 12px;
   cursor: pointer;
   border: 1px solid rgb(101, 101, 101);
+}
+
+.title {
+  font-size: 17px;
+  margin:5% 20px 20px 90px;
+}
+
+.main-container {
+  display: flex;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 90px;
+  padding-right: 90px;
+}
+
+.navLinks {
+  padding-top: 25px;
+}
+
+.navItem {
+  font-size: 18px;
+}
+
+.about-container {
+  margin: 5% 90px;
+}
+
+.quote {
+  text-align: center;
+  font-size: 25px;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 10%;
 }
 
 @media only screen and (max-width: 768px) {
